2007-12-04  David Turner  <cillian64@googlemail.com>

	** Fix for bug #466241

	* exchange-account-setup.c: (org_gnome_exchange_auth_section):
	Added a mnemonic to the Authentication Type label/dropdown

2007-11-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #495123

	* exchange-mail-send-options.c (append_to_header):
	Use e_msg_composer_hdrs_get_from_account() to obtain the EAccount.

2007-11-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #479081

	* exchange-account-setup.c: (org_gnome_exchange_owa_url):
	Check for input validity immediately after creating setup widgets.

2007-11-14  Matthew Barnes  <mbarnes@redhat.com>

	* exchange-folder.c (ex_create_folder_info):
	Call camel_folder_info_new() instead of g_new0().

2007-10-26  Kjartan Maraas  <kmaraas@gnome.org>

	* exchange-account-setup.c: (org_gnome_exchange_settings),
	(print_error), (set_oof_info), (destroy_oof_data):
	* exchange-delegates-user.c: (exchange_delegates_user_edit):
	* exchange-mail-send-options.c: (append_to_header):
	Warning fixes:
	- mark some code static
	- use non-deprecated GSignal apis
	- rename shadowing variable

2007-10-09  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #437579

	* exchange-user-dialog.c:
	Fix various compiler warnings.  Patch from Milan Crha.

2007-10-02  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #469657

	* exchange-folder-size-display.c:
	Use destroy functions in GHashTables to simplify memory management.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #477045

	* exchange-folder-permission.c:
	* exchange-folder.c:
	Use standard icon names where applicable.

2007-09-10  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #301044  (Novell Bugzilla)

	* exchange-user-dialog.c: (e2k_user_dialog_get_user_list): Dont append
	the comma from the Nameselector.

2007-09-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #473903

	* exchange-delegates.c: (email_look_up):